# house_price_pred

./: .gitignore  preprocess.py  pyproject.toml  sol0.ipynb  sol1.ipynb
